--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/button7"
         android:layout_width="@dimen/sizeButton"
         android:layout_height="@dimen/sizeButton"
+        android:layout_marginTop="192dp"
         android:layout_marginEnd="@dimen/marginButton"
         android:layout_marginRight="@dimen/marginButton"
         android:text="@string/button7"
@@ -17,25 +18,44 @@
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
         app:layout_constraintEnd_toStartOf="@id/button8"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/button8"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintVertical_chainStyle="packed"/>
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <Button
         android:id="@+id/button8"
         android:layout_width="@dimen/sizeButton"
         android:layout_height="@dimen/sizeButton"
-        android:layout_marginEnd="@dimen/marginButton"
+        android:layout_marginStart="@dimen/marginButton"
         android:layout_marginLeft="@dimen/marginButton"
+        android:layout_marginTop="192dp"
+        android:layout_marginEnd="@dimen/marginButton"
+        android:layout_marginRight="@dimen/marginButton"
         android:text="@string/button8"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
-        app:layout_constraintLeft_toRightOf="@id/button7"
-        app:layout_constraintTop_toTopOf="@id/button7"
-        android:layout_marginStart="@dimen/marginButton" />
+        app:layout_constraintEnd_toStartOf="@id/button9"
+        app:layout_constraintStart_toEndOf="@id/button7"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:layout_marginStart="@dimen/marginButton"
+        android:layout_marginLeft="@dimen/marginButton"
+        android:layout_marginTop="192dp"
+        android:text="@string/button9"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/button8"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
