--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,8 +68,8 @@
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toTopOf="@id/button1"
         app:layout_constraintEnd_toStartOf="@id/button5"
-
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button7" />
@@ -89,7 +89,8 @@
         app:cornerRadius="@dimen/buttonCornerRadius"
         app:layout_constraintEnd_toStartOf="@id/button6"
         app:layout_constraintStart_toEndOf="@id/button4"
-        app:layout_constraintTop_toBottomOf="@id/button8" />
+        app:layout_constraintTop_toBottomOf="@id/button8"
+        app:layout_constraintBottom_toTopOf="@id/button2"/>
 
     <Button
         android:id="@+id/button6"
@@ -104,7 +105,56 @@
         app:cornerRadius="@dimen/buttonCornerRadius"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/button5"
-        app:layout_constraintTop_toBottomOf="@id/button9" />
+        app:layout_constraintTop_toBottomOf="@id/button9"
+        app:layout_constraintBottom_toTopOf="@id/button3"/>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:layout_marginTop="@dimen/marginButton"
+        android:layout_marginEnd="@dimen/marginButton"
+        android:layout_marginRight="@dimen/marginButton"
+        android:text="@string/button1"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintEnd_toStartOf="@id/button2"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button4" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:layout_marginStart="@dimen/marginButton"
+        android:layout_marginLeft="@dimen/marginButton"
+        android:layout_marginTop="@dimen/marginButton"
+        android:layout_marginEnd="@dimen/marginButton"
+        android:layout_marginRight="@dimen/marginButton"
+        android:text="@string/button2"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintEnd_toStartOf="@id/button3"
+        app:layout_constraintStart_toEndOf="@id/button1"
+        app:layout_constraintTop_toBottomOf="@id/button5" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:layout_marginStart="@dimen/marginButton"
+        android:layout_marginLeft="@dimen/marginButton"
+        android:layout_marginTop="@dimen/marginButton"
+        android:text="@string/button3"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/button2"
+        app:layout_constraintTop_toBottomOf="@id/button6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
