--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -156,5 +156,36 @@
         app:layout_constraintStart_toEndOf="@id/button2"
         app:layout_constraintTop_toBottomOf="@id/button6" />
 
+    <Button
+        android:id="@+id/button0"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/sizeButton"
+        android:layout_marginTop="@dimen/marginButton"
+        android:layout_marginEnd="@dimen/marginButton"
+        android:layout_marginRight="@dimen/marginButton"
+        android:text="@string/button0"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintEnd_toStartOf="@id/buttonDot"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="@id/button1"
+        app:layout_constraintTop_toBottomOf="@id/button2" />
+
+    <Button
+        android:id="@+id/buttonDot"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:layout_marginStart="@dimen/marginButton"
+        android:layout_marginLeft="@dimen/marginButton"
+        android:layout_marginTop="@dimen/marginButton"
+        android:text="@string/buttonDot"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintEnd_toEndOf="@id/button3"
+        app:layout_constraintStart_toEndOf="@id/button0"
+        app:layout_constraintTop_toBottomOf="@id/button3" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
