Добавил привязки для нижних границ у кнопок "7", "8" и "9".

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintBottom_toTopOf="@id/button4"/>
 
     <Button
         android:id="@+id/button8"
@@ -39,7 +40,8 @@
         app:layout_constraintEnd_toStartOf="@id/button9"
         app:layout_constraintStart_toEndOf="@id/button7"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintBottom_toTopOf="@id/button5"/>
 
     <Button
         android:id="@+id/button9"
@@ -55,7 +57,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/button8"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintBottom_toTopOf="@id/button6"/>
 
     <Button
         android:id="@+id/button4"
@@ -115,10 +118,12 @@
         android:layout_marginTop="@dimen/marginButton"
         android:layout_marginEnd="@dimen/marginButton"
         android:layout_marginRight="@dimen/marginButton"
+        android:layout_marginBottom="8dp"
         android:text="@string/button1"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toTopOf="@id/button0"
         app:layout_constraintEnd_toStartOf="@id/button2"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,10 +138,12 @@
         android:layout_marginTop="@dimen/marginButton"
         android:layout_marginEnd="@dimen/marginButton"
         android:layout_marginRight="@dimen/marginButton"
+        android:layout_marginBottom="8dp"
         android:text="@string/button2"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toTopOf="@id/button0"
         app:layout_constraintEnd_toStartOf="@id/button3"
         app:layout_constraintStart_toEndOf="@id/button1"
         app:layout_constraintTop_toBottomOf="@id/button5" />
@@ -148,10 +155,12 @@
         android:layout_marginStart="@dimen/marginButton"
         android:layout_marginLeft="@dimen/marginButton"
         android:layout_marginTop="@dimen/marginButton"
+        android:layout_marginBottom="8dp"
         android:text="@string/button3"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toTopOf="@+id/buttonDot"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/button2"
         app:layout_constraintTop_toBottomOf="@id/button6" />
