Добавл кнопки "Сброс (C)", "Деление (/)" и "Умножение (*)".
Добавил элементы Button, настроил размеры кнопок, настроил привязки кнопок к кнопкам "7", "8" и "9.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="buttonCornerRadius">0dp</dimen>
     <dimen name="sizeButton">64dp</dimen>
     <dimen name="marginButton">8dp</dimen>
+    <dimen name="marginTop">192dp</dimen>
 </resources>
