--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,66 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/buttonClear"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:layout_marginTop="@dimen/marginTop"
+        android:layout_marginEnd="@dimen/marginButton"
+        android:layout_marginRight="@dimen/marginButton"
+        android:layout_marginBottom="@dimen/marginButton"
+        android:text="@string/buttonClear"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toTopOf="@id/button7"
+        app:layout_constraintEnd_toStartOf="@id/buttonDivision"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <Button
+        android:id="@+id/buttonDivision"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:layout_marginStart="@dimen/marginButton"
+        android:layout_marginLeft="@dimen/marginButton"
+        android:layout_marginTop="@dimen/marginTop"
+        android:layout_marginEnd="@dimen/marginButton"
+        android:layout_marginRight="@dimen/marginButton"
+        android:layout_marginBottom="@dimen/marginButton"
+        android:text="@string/buttonDivision"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toTopOf="@id/button8"
+        app:layout_constraintEnd_toStartOf="@id/buttonМultiplication"
+        app:layout_constraintStart_toEndOf="@id/buttonClear"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <Button
+        android:id="@+id/buttonМultiplication"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:layout_marginStart="@dimen/marginButton"
+        android:layout_marginLeft="@dimen/marginButton"
+        android:layout_marginTop="@dimen/marginTop"
+        android:layout_marginBottom="@dimen/marginButton"
+        android:text="@string/buttonMultiplication"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toTopOf="@id/button9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/buttonDivision"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <Button
         android:id="@+id/button7"
         android:layout_width="@dimen/sizeButton"
         android:layout_height="@dimen/sizeButton"
-        android:layout_marginTop="192dp"
         android:layout_marginEnd="@dimen/marginButton"
         android:layout_marginRight="@dimen/marginButton"
         android:text="@string/button7"
@@ -20,8 +76,7 @@
         app:layout_constraintEnd_toStartOf="@id/button8"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintTop_toBottomOf="@id/buttonClear"
         app:layout_constraintBottom_toTopOf="@id/button4"/>
 
     <Button
@@ -30,7 +85,6 @@
         android:layout_height="@dimen/sizeButton"
         android:layout_marginStart="@dimen/marginButton"
         android:layout_marginLeft="@dimen/marginButton"
-        android:layout_marginTop="192dp"
         android:layout_marginEnd="@dimen/marginButton"
         android:layout_marginRight="@dimen/marginButton"
         android:text="@string/button8"
@@ -39,7 +93,7 @@
         app:cornerRadius="@dimen/buttonCornerRadius"
         app:layout_constraintEnd_toStartOf="@id/button9"
         app:layout_constraintStart_toEndOf="@id/button7"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buttonDivision"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintBottom_toTopOf="@id/button5"/>
 
@@ -49,14 +103,13 @@
         android:layout_height="@dimen/sizeButton"
         android:layout_marginStart="@dimen/marginButton"
         android:layout_marginLeft="@dimen/marginButton"
-        android:layout_marginTop="192dp"
         android:text="@string/button9"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/button8"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buttonМultiplication"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintBottom_toTopOf="@id/button6"/>
 
