Добавл кнопки "Вычитание (-)", "Сложение (+)" и "Равно (=)".
Добавил элементы Button, настроил размеры кнопок, настроил привязки кнопок к кнопкам "*", "9", "6", "3" и ".".

P.S. Для кнопки "6" пришлось указать Margin = 24dp. В коде не стал переносить в ресурсы, чтобы потом разобраться, как обойтись без Margin (если это возможно).

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="sizeButton">64dp</dimen>
     <dimen name="marginButton">8dp</dimen>
     <dimen name="marginTop">192dp</dimen>
+    <dimen name="layoutWidthHeightZeroDP">0dp</dimen>
 </resources>
