--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,14 +52,34 @@
         android:layout_marginStart="@dimen/marginButton"
         android:layout_marginLeft="@dimen/marginButton"
         android:layout_marginTop="@dimen/marginTop"
+        android:layout_marginEnd="@dimen/marginButton"
+        android:layout_marginRight="@dimen/marginButton"
         android:layout_marginBottom="@dimen/marginButton"
         android:text="@string/buttonMultiplication"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
         app:layout_constraintBottom_toTopOf="@id/button9"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/buttonSubtraction"
         app:layout_constraintStart_toEndOf="@id/buttonDivision"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <Button
+        android:id="@+id/buttonSubtraction"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:layout_marginStart="@dimen/marginButton"
+        android:layout_marginLeft="@dimen/marginButton"
+        android:layout_marginTop="@dimen/marginTop"
+        android:layout_marginBottom="@dimen/marginButton"
+        android:text="@string/buttonSubtraction"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toTopOf="@id/buttonAddition"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/buttonМultiplication"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
@@ -73,11 +93,11 @@
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toTopOf="@id/button4"
         app:layout_constraintEnd_toStartOf="@id/button8"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/buttonClear"
-        app:layout_constraintBottom_toTopOf="@id/button4"/>
+        app:layout_constraintTop_toBottomOf="@id/buttonClear" />
 
     <Button
         android:id="@+id/button8"
@@ -91,11 +111,11 @@
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toTopOf="@id/button5"
         app:layout_constraintEnd_toStartOf="@id/button9"
         app:layout_constraintStart_toEndOf="@id/button7"
         app:layout_constraintTop_toBottomOf="@id/buttonDivision"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintBottom_toTopOf="@id/button5"/>
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <Button
         android:id="@+id/button9"
@@ -103,15 +123,48 @@
         android:layout_height="@dimen/sizeButton"
         android:layout_marginStart="@dimen/marginButton"
         android:layout_marginLeft="@dimen/marginButton"
+        android:layout_marginEnd="@dimen/marginButton"
+        android:layout_marginRight="@dimen/marginButton"
         android:text="@string/button9"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/button6"
+        app:layout_constraintEnd_toStartOf="@id/buttonAddition"
         app:layout_constraintStart_toEndOf="@id/button8"
         app:layout_constraintTop_toBottomOf="@id/buttonМultiplication"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintBottom_toTopOf="@id/button6"/>
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <Button
+        android:id="@+id/buttonAddition"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/layoutWidthHeightZeroDP"
+        android:layout_marginStart="@dimen/marginButton"
+        android:layout_marginLeft="@dimen/marginButton"
+        android:layout_marginBottom="@dimen/marginButton"
+        android:text="@string/buttonAddition"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toTopOf="@id/buttonEqually"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/button9"
+        app:layout_constraintTop_toTopOf="@id/button9" />
+
+    <Button
+        android:id="@+id/buttonEqually"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/layoutWidthHeightZeroDP"
+        android:layout_marginStart="@dimen/marginButton"
+        android:layout_marginLeft="@dimen/marginButton"
+        android:text="@string/buttonEqually"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="@id/buttonDot"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/button3"
+        app:layout_constraintTop_toBottomOf="@id/buttonAddition" />
 
     <Button
         android:id="@+id/button4"
@@ -143,10 +196,10 @@
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toTopOf="@id/button2"
         app:layout_constraintEnd_toStartOf="@id/button6"
         app:layout_constraintStart_toEndOf="@id/button4"
-        app:layout_constraintTop_toBottomOf="@id/button8"
-        app:layout_constraintBottom_toTopOf="@id/button2"/>
+        app:layout_constraintTop_toBottomOf="@id/button8" />
 
     <Button
         android:id="@+id/button6"
@@ -155,14 +208,16 @@
         android:layout_marginStart="@dimen/marginButton"
         android:layout_marginLeft="@dimen/marginButton"
         android:layout_marginTop="@dimen/marginButton"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:text="@string/button6"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/button3"
+        app:layout_constraintEnd_toEndOf="@id/buttonAddition"
         app:layout_constraintStart_toEndOf="@id/button5"
-        app:layout_constraintTop_toBottomOf="@id/button9"
-        app:layout_constraintBottom_toTopOf="@id/button3"/>
+        app:layout_constraintTop_toBottomOf="@id/button9" />
 
     <Button
         android:id="@+id/button1"
@@ -171,7 +226,7 @@
         android:layout_marginTop="@dimen/marginButton"
         android:layout_marginEnd="@dimen/marginButton"
         android:layout_marginRight="@dimen/marginButton"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/marginButton"
         android:text="@string/button1"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
@@ -191,7 +246,7 @@
         android:layout_marginTop="@dimen/marginButton"
         android:layout_marginEnd="@dimen/marginButton"
         android:layout_marginRight="@dimen/marginButton"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/marginButton"
         android:text="@string/button2"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
@@ -208,19 +263,21 @@
         android:layout_marginStart="@dimen/marginButton"
         android:layout_marginLeft="@dimen/marginButton"
         android:layout_marginTop="@dimen/marginButton"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="@dimen/marginButton"
+        android:layout_marginRight="@dimen/marginButton"
+        android:layout_marginBottom="@dimen/marginButton"
         android:text="@string/button3"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
         app:cornerRadius="@dimen/buttonCornerRadius"
         app:layout_constraintBottom_toTopOf="@+id/buttonDot"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/buttonEqually"
         app:layout_constraintStart_toEndOf="@id/button2"
         app:layout_constraintTop_toBottomOf="@id/button6" />
 
     <Button
         android:id="@+id/button0"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/layoutWidthHeightZeroDP"
         android:layout_height="@dimen/sizeButton"
         android:layout_marginTop="@dimen/marginButton"
         android:layout_marginEnd="@dimen/marginButton"
