Добавил поле вывода результата.
Добавил поле тип EditText для вывода результата работы калькулятора. Настроил цвет фоне и начальные привязки к форме.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="marginButton">5dp</dimen>
     <dimen name="marginTop">192dp</dimen>
     <dimen name="layoutWidthHeightZeroDP">0dp</dimen>
+    <dimen name="zeroLayoutHeight">0dp</dimen>
+    <dimen name="editTextHeight">64dp</dimen>
+    <dimen name="editTextWidth">280dp</dimen>
 </resources>
