--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,16 @@
     android:background="@drawable/background"
     tools:context=".MainActivity">
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="@dimen/editTextWidth"
+        android:layout_height="@dimen/editTextHeight"
+        android:background="@color/editTextBackground"
+        app:layout_constraintLeft_toLeftOf="@id/buttonClear"
+        app:layout_constraintRight_toRightOf="@id/buttonSubtraction"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
         android:insetRight="@dimen/marginButton"
@@ -24,7 +34,8 @@
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.2"
+         />
 
     <com.google.android.material.button.MaterialButton
         android:insetLeft="@dimen/marginButton"
@@ -129,8 +140,7 @@
         android:insetTop="@dimen/marginButton"
         android:id="@+id/buttonAddition"
         android:layout_width="@dimen/sizeButton"
-        android:layout_height="0dp"
-
+        android:layout_height="@dimen/layoutWidthHeightZeroDP"
         android:text="@string/buttonAddition"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
@@ -146,7 +156,7 @@
         android:insetTop="@dimen/marginButton"
         android:id="@+id/buttonEqually"
         android:layout_width="@dimen/sizeButton"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/layoutWidthHeightZeroDP"
         android:text="@string/buttonEqually"
         android:textSize="@dimen/textSize"
         app:backgroundTint="@color/buttonColor"
