--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="zeroLayoutHeight">0dp</dimen>
     <dimen name="editTextHeight">64dp</dimen>
     <dimen name="editTextWidth">280dp</dimen>
+    <dimen name="editTextTextSize">32sp</dimen>
 </resources>
