--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,6 +1,302 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/myLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
+    tools:context=".MainActivity">
+
+    <TextView
+        android:id="@+id/TextView"
+        android:layout_width="@dimen/editTextWidth"
+        android:layout_height="@dimen/editTextHeight"
+        android:background="@color/editTextBackground"
+        android:gravity="end|center"
+        android:textSize="@dimen/editTextTextSize"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.55"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.05" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/buttonClear"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/buttonClear"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.275" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/buttonDivision"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/buttonDivision"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonClear"
+        app:layout_constraintStart_toEndOf="@+id/buttonClear"
+        app:layout_constraintTop_toTopOf="@+id/buttonClear" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/buttonМultiplication"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/buttonMultiplication"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonDivision"
+        app:layout_constraintStart_toEndOf="@+id/buttonDivision"
+        app:layout_constraintTop_toTopOf="@+id/buttonDivision" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/buttonSubtraction"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/buttonSubtraction"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonМultiplication"
+        app:layout_constraintStart_toEndOf="@+id/buttonМultiplication"
+        app:layout_constraintTop_toTopOf="@+id/buttonМultiplication" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/button7"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/button7"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintEnd_toEndOf="@+id/buttonClear"
+        app:layout_constraintStart_toStartOf="@+id/buttonClear"
+        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/button8"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/button8"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="@+id/button7"
+        app:layout_constraintStart_toEndOf="@+id/button7"
+        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/button9"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/button9"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="@+id/button8"
+        app:layout_constraintStart_toEndOf="@+id/button8"
+        app:layout_constraintTop_toTopOf="@+id/button8" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/buttonAddition"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/layoutWidthHeightZeroDP"
+        android:text="@string/buttonAddition"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="@+id/button6"
+        app:layout_constraintStart_toEndOf="@+id/button9"
+        app:layout_constraintTop_toBottomOf="@+id/buttonМultiplication" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/buttonEqually"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/layoutWidthHeightZeroDP"
+        android:text="@string/buttonEqually"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonDot"
+        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/button4"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/button4"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintEnd_toEndOf="@+id/button7"
+        app:layout_constraintStart_toStartOf="@+id/button7"
+        app:layout_constraintTop_toBottomOf="@+id/button7" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/button5"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/button5"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="@+id/button4"
+        app:layout_constraintStart_toEndOf="@+id/button4"
+        app:layout_constraintTop_toTopOf="@+id/button4" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/button6"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/button6"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="@+id/button5"
+        app:layout_constraintStart_toEndOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/button8" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/button1"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/button1"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintEnd_toEndOf="@+id/button4"
+        app:layout_constraintStart_toStartOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/button2"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/button2"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="@+id/button1"
+        app:layout_constraintStart_toEndOf="@+id/button1"
+        app:layout_constraintTop_toTopOf="@+id/button1" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/button3"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/button3"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="@+id/button2"
+        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintTop_toTopOf="@+id/button2" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/button0"
+        android:layout_width="@dimen/layoutWidthHeightZeroDP"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/button0"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintEnd_toEndOf="@+id/button2"
+        app:layout_constraintStart_toStartOf="@+id/button1"
+        app:layout_constraintTop_toBottomOf="@+id/button1" />
+
+    <com.google.android.material.button.MaterialButton
+        android:insetLeft="@dimen/marginButton"
+        android:insetRight="@dimen/marginButton"
+        android:insetBottom="@dimen/marginButton"
+        android:insetTop="@dimen/marginButton"
+        android:id="@+id/buttonDot"
+        android:layout_width="@dimen/sizeButton"
+        android:layout_height="@dimen/sizeButton"
+        android:text="@string/buttonDot"
+        android:textSize="@dimen/textSize"
+        app:backgroundTint="@color/buttonColor"
+        app:cornerRadius="@dimen/buttonCornerRadius"
+        app:layout_constraintBottom_toBottomOf="@+id/button0"
+        app:layout_constraintStart_toEndOf="@+id/button0"
+        app:layout_constraintTop_toTopOf="@+id/button0" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
