Добавил элементы на вторую Activity.
Добавил элементы на вторую Activity для выбора темы приложения: надпись, группу радио-кнопок, кнопку выбора. Добавил фоновый рисунок. Вынес текст и размеры в файлы ресурсов.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="editTextHeight">64dp</dimen>
     <dimen name="editTextWidth">280dp</dimen>
     <dimen name="editTextTextSize">32sp</dimen>
+    <dimen name="settingsTextViewPadding">20dp</dimen>
 </resources>
