Изменил состав элементов в MainActivity.
Добавил в MainActivity (для ориентации "Партрет") кнопку "Настройки", настроил ее вид. Удалил группу радио-кнопок для выбора темы приложения.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="editTextWidth">280dp</dimen>
     <dimen name="editTextTextSize">32sp</dimen>
     <dimen name="settingsTextViewPadding">20dp</dimen>
+    <dimen name="btnSettingsMarginVertical">30dp</dimen>
 </resources>
