--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -298,5 +298,15 @@
         app:layout_constraintStart_toEndOf="@+id/button0"
         app:layout_constraintTop_toTopOf="@+id/button0" />
 
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/sizeButton"
+        android:backgroundTint="@color/buttonColor"
+        android:text="@string/btnSettingsText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button0"
+        android:layout_marginVertical="@dimen/btnSettingsMarginVertical"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
