В MainActivity добавил обработчик нажатия кнопки.
В MainActivity добавил обработчик нажатия кнопки "Настройки" для вызова экрана с настройками темы приложения.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -299,6 +299,7 @@
         app:layout_constraintTop_toTopOf="@+id/button0" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/buttonSettings"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/sizeButton"
         android:backgroundTint="@color/buttonColor"
